# stretch_squeeze_psych

./: .gitignore  README.md  commands_to_reproduce.txt  requirements.txt
psych_code/: pyproject.toml
psych_code/experiment_files/6ani_6nonani_v1_0/: 6ani_6nonani_v1_0.html  config.yaml  dataset_dirmap.csv
psych_code/experiment_files/6ani_6nonani_v1_1/: 6ani_6nonani_v1_1.html  config.yaml
psych_code/experiment_files/6ani_6nonani_v1_2/: 6ani_6nonani_v1_2.html  config.yaml
psych_code/experiment_files/6ani_6nonani_v1_3/: 6ani_6nonani_v1_3.html  config.yaml
psych_code/experiment_files/6ani_6nonani_v1_4/: 6ani_6nonani_v1_4.html  config.yaml
psych_code/experiment_files/6ani_6nonani_v1_5/: 6ani_6nonani_v1_5.html
psych_code/experiment_files/6ani_6nonani_v1_6/: 6ani_6nonani_v1_6.html  config.yaml
psych_code/experiment_files/6ani_6nonani_v2_0/: 6ani_6nonani_v2_0.html
psych_code/experiment_files/6ani_6nonani_v2_1/: 6ani_6nonani_v2_1.html  dataset_dirmap.csv
psych_code/experiment_files/js_shared/: experiment_setup.js  jspsych_nodes.js  main.js  mts_globals.js  mts_trial_nodes.js  setup.js  utils.js
psych_code/jspsych_plugins/: jspsych-my-virtual-chinrest.js  jspsych-psychophysics_v2.js
psych_code/scripts/: alexnet_glmm.r  delete_buckets.py  deploy_experiment.py  deployed_experiment_teardown.py  generate_backward_masks.py  get_experiment_data.py  glmm.r  index_stretch_squeeze_db.py
psych_code/stretch_squeeze_psych_modules/: deploy_session_metadata_lambda_function.py  generate_trials.py  process_session_data.py  session_metadata_lambda.py
(+14 files in other folders)
