[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stretch_squeeze_psych_modules"
version = "0.0.1"
description = "Utilities for running image classification psychophysics experiments in the Stretch and Squeeze project"
requires-python = ">=3.9"
authors = [
    {name = "Morgan Talbot", email = "mtalbot@mit.edu"},
]

[tool.setuptools]
packages = ["stretch_squeeze_psych_modules"]